# ssimulacra2

./: PATENTS  README.md  build_ssimulacra
src/: CMakeLists.txt  LICENSE  ssimulacra2.cc  ssimulacra2.h  ssimulacra2_main.cc
src/lib/: CMakeLists.txt  README.md  jxl.cmake
src/lib/extras/: packed_image.h
src/lib/jxl/: chroma_from_luma.h  dec_cache.h  frame_header.h  image_bundle.h  image_metadata.h  passes_state.h
